# src/main/interfaces/IConverterConfig.model.ts
@@ -1,0 +1,6 @@
+export interface IConverterConfig {
+    // source of the file to be converted
+    source: string;
+    // target location of the converted file + name
+    target: string;
+}
