# src/main/interfaces/IConverterResponse.model.ts
@@ -1,0 +1,3 @@
+export interface IConverterResponse {
+    message: string;
+}
