# src/main/interfaces/IGitHubActionsConverterConfig.model.ts
@@ -1,0 +1,6 @@
+import { IConverterConfig } from ".";
+
+export interface IGitHubActionsConverterConfig extends IConverterConfig{
+    singleFileTransformation: Boolean,
+    evaluationCreateYaml: Boolean
+}
