# src/main/routes/index.ts
@@ -1,5 +1,6 @@
-import PingController from "../controllers/ping";
 import express = require("express");
+import PingController from "../controllers/ping.controller";
+import ConverterRouter from "./converter.router";
 
 const router = express.Router();
 
@@ -8,5 +9,7 @@ router.get("/ping", async (_req, res) => {
     const response = await controller.getMessage();
     return res.send(response);
 });
+
+router.use("/converter", ConverterRouter);
 
 export default router;
